--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,11 @@
         <artifactId>selenium-support</artifactId>
         <version>4.3.0</version>
     </dependency>
-
-
-
-
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.4.0</version>
+    </dependency>
 
 </dependencies>
 
